# PAquant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  cloudbaserc.json  package.json  pnpm-lock.yaml  pyproject.toml
.agents/: README.md
.agents/common/: price-action-core.md  risk-control.md
.agents/traders/: always-in-trend.md  best-trades-only.md  breakout-failure.md  breakout-pullback.md  brooks-generalist.md  final-flag.md  major-reversal.md  second-entry.md  trading-range-scalper.md  wedge-reversal.md
apps/web/: eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  deployment.contract.test.ts  styles.contract.test.ts  styles.css
apps/web/tests/: workbench.spec.ts
docs/superpowers/plans/: 2026-06-30-paquant-api-service.md  2026-06-30-paquant-chart-replay-controls.md  2026-06-30-paquant-data-provider.md  2026-06-30-paquant-drawing-tool-commands.md  2026-06-30-paquant-higher-timeframe-context.md  2026-06-30-paquant-knowledge-browser.md  2026-06-30-paquant-knowledge-retrieval.md  2026-06-30-paquant-model-provider-boundary.md  2026-06-30-paquant-no-trade-decision.md  2026-06-30-paquant-pdf-source-catalog.md  2026-06-30-paquant-persistence-schema.md  2026-06-30-paquant-phase-one.md  2026-06-30-paquant-remote-xau-data.md  2026-06-30-paquant-simulation-analytics.md  2026-06-30-paquant-simulation-execution-model.md  (+4 more)
functions/paquant-api/: api.js  api.test.js  event.js  event.test.js  index.js  package.json
(+86 files in other folders)
