[project]
name = "paquant"
version = "0.1.0"
description = "AI-native XAU price action quant trading workstation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.138.2",
  "httpx>=0.28.1",
  "pydantic>=2.8",
  "typing-extensions>=4.12",
  "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
pythonpath = ["services/api"]
addopts = "-ra"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
